--- a/package.json
+++ b/package.json
@@ -7,26 +7,32 @@
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
     "@jameslnewell/jest-preset": "^3.0.0",
-    "@swc/core": "^1.2.136",
+    "@swc/core": "^1.2.152",
     "@swc/jest": "^0.2.17",
+    "@swc/register": "^0.1.10",
     "@types/eslint": "^8",
     "@types/jest": "^27.4.0",
+    "@types/js-yaml": "^4",
     "@types/prettier": "^2",
     "add": "^2.0.6",
     "eslint": "^8.8.0",
     "jest": "^27.4.7",
+    "jest-pnp-resolver": "^1.2.2",
     "node-gyp": "^8.4.1",
     "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
   },
   "jest": {
-    "preset": "@jameslnewell/jest-preset"
+    "preset": "@jameslnewell/jest-preset",
+    "resolver": "jest-pnp-resolver"
   },
   "scripts": {
     "test": "jest"
   },
   "dependencies": {
-    "@types/node": "^17.0.14"
+    "@types/node": "^17.0.14",
+    "js-yaml": "^4.1.0"
   }
 }
