wip - refactor directory structure and setup example pipeline

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,4 +2,4 @@
 steps:
   - command: |
     yarn install --immutable
-    node -r '@swc/register' ./.buildkite/pipeline.js
+    yarn node -r '@swc/register' ./.buildkite/pipeline.ts
