--- a/package.json
+++ b/package.json
@@ -4,35 +4,33 @@
   "main": "dist/index.js",
   "author": "James Newell <james@jameslnewell.dev>",
   "license": "MIT",
-  "packageManager": "yarn@3.1.1",
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "@types/node": "^17.0.14",
+    "js-yaml": "^4.1.0",
+    "prettier": "^2.5.1"
+  },
   "devDependencies": {
     "@jameslnewell/jest-preset": "^3.0.0",
-    "@swc/core": "^1.2.152",
-    "@swc/jest": "^0.2.17",
+    "@jest/types": "^27.5.1",
+    "@swc/core": "^1.2.154",
+    "@swc/jest": "^0.2.20",
     "@swc/register": "^0.1.10",
-    "@types/eslint": "^8",
-    "@types/jest": "^27.4.0",
-    "@types/js-yaml": "^4",
-    "@types/prettier": "^2",
-    "add": "^2.0.6",
+    "@types/eslint": "^8.4.1",
+    "@types/jest": "^27.4.1",
+    "@types/js-yaml": "^4.0.5",
+    "@types/prettier": "^2.4.4",
     "eslint": "^8.8.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
-    "node-gyp": "^8.4.1",
-    "prettier": "^2.5.1",
-    "regenerator-runtime": "^0.13.9",
-    "typescript": "^4.6.2",
-    "yarn": "^1.22.17"
+    "typescript": "^4.6.2"
   },
   "jest": {
     "preset": "@jameslnewell/jest-preset",
     "resolver": "jest-pnp-resolver"
   },
   "scripts": {
-    "test": "jest"
-  },
-  "dependencies": {
-    "@types/node": "^17.0.14",
-    "js-yaml": "^4.1.0"
+    "check:types": "tsc --noEmit",
+    "test": "jest --maxWorkers=1"
   }
 }
