--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,20 +1,27 @@
 
 steps:
   - commands:
+      - set -eux
       - yarn install --immutable
-      - yarn node -r '@swc/register' ./.buildkite/pipeline.ts
+      - chown root /var/run/docker.sock
+      - yarn node -r '@swc/register' ./.buildkite/pipeline.ts | buildkite-agent pipeline upload
     plugins:
       - docker#v3.11.0:
           image: node:16-alpine
           volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-      - gencer/cache#v2.4.10:
-          backend: rsync
-          id: node
-          key: "v2-cache-{{ id }}-{{ runner.os }}-{{ checksum 'yarn.lock' }}"
-          restore-keys:
-            - 'v2-cache-{{ id }}-{{ runner.os }}-'
-            - 'v2-cache-{{ id }}-'
-          paths:
-            - .yarn/cache
-          continue_on_error: true
+            - /var/lib/buildkite/builds:/var/lib/buildkite/builds
+            - /usr/local/bin/buildkite-agent:/usr/local/bin/buildkite-agent
+          environment:
+            - "BUILDKITE_BUILD_PATH=/var/lib/buildkite/builds"
+          propagate-environment: true
+      # - gencer/cache#v2.4.10:
+      #     backend: rsync
+      #     id: node
+      #     key: "v2-cache-{{ id }}-{{ runner.os }}-{{ checksum 'yarn.lock' }}"
+      #     restore-keys:
+      #       - 'v2-cache-{{ id }}-{{ runner.os }}-'
+      #       - 'v2-cache-{{ id }}-'
+      #     paths:
+      #       - .yarn/cache
+      #     continue_on_error: true
