finish test parity

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,8 +10,8 @@ steps:
           image: node:16-alpine
           volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - /var/lib/buildkite/builds:/var/lib/buildkite/builds
-            - /usr/local/bin/buildkite-agent:/usr/local/bin/buildkite-agent
+            # - /var/lib/buildkite/builds:/var/lib/buildkite/builds
+            # - /usr/local/bin/buildkite-agent:/usr/local/bin/buildkite-agent
           environment:
             - "BUILDKITE_BUILD_PATH=/var/lib/buildkite/builds"
           propagate-environment: true
