--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@2
+      - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
