--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "resolver": "jest-pnp-resolver"
   },
   "scripts": {
+    "check": "yarn run check:types",
     "check:types": "tsc --noEmit",
     "test": "jest --maxWorkers=1"
   }
