--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,9 +18,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - run: |
-          yarn install
-          yarn run check
+      - run: yarn install
+      - run: yarn run check
 
   test:
     runs-on: ubuntu-latest
@@ -32,9 +31,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - run: |
-          yarn install
-          yarn run test
+      - run: yarn install
+      - run: yarn run test
 
   build:
     runs-on: ubuntu-latest
@@ -46,18 +44,31 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - run: |
-          yarn install
-          yarn run build
+      - run: yarn install
+      - run: yarn run build
       - uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist
 
+  npm-publish:
+    runs-on: ubuntu-latest
+    needs: 
+      - build
+    steps: 
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   docker-push:
     runs-on: ubuntu-latest
     needs: 
       - build
+      - npm-publish
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
@@ -73,15 +84,3 @@ jobs:
           push: true
           tags: jameslnewell/buildkite-pipelines:latest
   
-  npm-publish:
-    runs-on: ubuntu-latest
-    needs: 
-      - build
-    steps: 
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
