--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,8 +95,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - id: version
+        run: echo "::set-output name=version::$(jq -r .version package.json)"
       - uses: docker/build-push-action@v2
         with:
           push: true
-          tags: jameslnewell/buildkite-pipelines:latest
+          tags: jameslnewell/buildkite-pipelines:latest,jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }}
   
