--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -76,6 +76,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: dist
+      - run: ls -la
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -87,9 +88,6 @@ jobs:
       - npm-publish
     steps: 
       - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
