--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -98,5 +98,11 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           push: true
+          file: docker/Dockerfile
           tags: jameslnewell/buildkite-pipelines:latest,jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }}
+      - uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          readme-filepath: docker/README.md
   
