--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -98,6 +98,7 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           push: true
+          context: .
           file: docker/Dockerfile
           tags: jameslnewell/buildkite-pipelines:latest,jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }}
       # doesn't work with DH PAT 😔
