--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.5.1"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "@jameslnewell/jest-preset": "^3.0.0",
     "@jest/types": "^27.5.1",
     "@swc/cli": "^0.1.55",
