update CLI to support requires aka TSC/SWC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,8 @@
     "**/.yarn": true,
     "**/.pnp.*": true
   },
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "eslint.nodePath": ".yarn/sdks",
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
-  "jest.jestCommandLine": "yarn test"
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
 }
