--- a/package.json
+++ b/package.json
@@ -10,26 +10,33 @@
   "license": "MIT",
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "debug": "^4.3.4",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "resolve": "^1.22.0",
+    "yargs": "^17.4.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
     "@jameslnewell/jest-preset": "^3.0.0",
     "@jest/types": "^27.5.1",
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.159",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.163",
     "@swc/jest": "^0.2.20",
     "@swc/register": "^0.1.10",
+    "@types/debug": "^4",
     "@types/eslint": "^8.4.1",
     "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.14",
     "@types/prettier": "^2.4.4",
+    "@types/resolve": "^1.20.1",
+    "@types/yargs": "^17.0.10",
     "chokidar": "^3.5.3",
     "eslint": "^8.8.0",
     "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "jest": {
