--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,9 +61,10 @@ jobs:
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: yarn changeset publish
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: yarn dlx publish-if-not-published
+      # - run: yarn changeset publish
+      #   env:
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: git pull
       - run: git push --follow-tags
 
