--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,8 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: yarn dlx publish-if-not-published
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       # - run: yarn changeset publish
       #   env:
       #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
