--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,8 @@ jobs:
         shell: bash {0} # opt-out of exit on error
       - run: git push
       - run: echo "//registry.npmjs.org/:_authToken=\$NPM_TOKEN" > .npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: yarn changeset publish
         id: changesets
         env:
