--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,13 +58,10 @@ jobs:
       - run: git commit -am "Bumped package versions 📦" || echo "Versions not updated. Nothing to commit."
         shell: bash {0} # opt-out of exit on error
       - run: git push
-      - run: echo "//registry.npmjs.org/:_authToken=\$NPM_TOKEN" > .npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: yarn changeset publish
         id: changesets
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: git pull
       - run: git push --follow-tags
 
