--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - build
-    outputs:
-      published: ${{ steps.changesets.outputs.published }}
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
@@ -58,8 +56,9 @@ jobs:
       - run: git commit -am "Bumped package versions 📦" || echo "Versions not updated. Nothing to commit."
         shell: bash {0} # opt-out of exit on error
       - run: git push
-      - run: yarn changeset publish
-        id: changesets
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: yarn dlx publish-if-not-published
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: git pull
@@ -70,7 +69,6 @@ jobs:
     needs: 
       - build
       - npm-publish
-    if: needs.npm-publish.outputs.published == 'true'
     steps: 
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
@@ -80,7 +78,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - id: version
         run: echo "::set-output name=version::$(jq -r .version package.json)"
+      - id: pushed
+        run: echo "::set-output name=pushed::$(docker manifest inspect jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }} > /dev/null)"
       - uses: docker/build-push-action@v2
+        if: ${{ steps.version.outputs.pushed }} == 1
         with:
           push: true
           context: .
