--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - build
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
@@ -51,6 +53,8 @@ jobs:
           name: dist
           path: dist
       - run: yarn changeset version
+      - id: version
+        run: echo "::set-output name=version::$(jq -r .version package.json)"
       - run: git config --global user.email "github-actions[bot]"
       - run: git config --global user.name github-actions[bot]@users.noreply.github.com
       - run: git commit -am "Bumped package versions 📦" || echo "Versions not updated. Nothing to commit."
@@ -73,8 +77,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - id: version
-        run: echo "::set-output name=version::$(jq -r .version package.json)"
+
       - id: pushed
         run: echo "::set-output name=pushed::$(docker manifest inspect jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }} > /dev/null)"
       - uses: docker/build-push-action@v2
@@ -83,7 +86,7 @@ jobs:
           push: true
           context: .
           file: docker/Dockerfile
-          tags: jameslnewell/buildkite-pipelines:latest,jameslnewell/buildkite-pipelines:${{ steps.version.outputs.version }}
+          tags: jameslnewell/buildkite-pipelines:latest,jameslnewell/buildkite-pipelines:${{ needs.npm-publish.outputs.version }}
       # doesn't work with DH PAT 😔
       # - uses: peter-evans/dockerhub-description@v2
       #   with:
