--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "build:types": "tsc --declaration --emitDeclarationOnly",
     "build:transpile": "yarn swc src --out-dir dist --source-maps",
     "test": "jest --maxWorkers=1",
+    "changeset": "changeset",
     "version": "changeset version",
     "release": "changeset publish"
   }
