--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:16-alpine
-WORKDIR /workdir
+
+WORKDIR /
 
 ENV PATH="/workdir/node_modules/.bin:${PATH}"
-RUN yarn add @jameslnewell/buildkite-pipelines
+RUN yarn add @jameslnewell/buildkite-pipelines@latest
+
+WORKDIR /workdir
