--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16-alpine
 
 WORKDIR /
 
-ENV PATH="/workdir/node_modules/.bin:${PATH}"
+ENV PATH="/node_modules/.bin:${PATH}"
 RUN yarn add @jameslnewell/buildkite-pipelines@latest
 
 WORKDIR /workdir
