only install production dependencies

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,6 @@ FROM node:16-alpine
 WORKDIR /
 
 ENV PATH="/node_modules/.bin:${PATH}"
-RUN yarn add @jameslnewell/buildkite-pipelines@latest
+RUN yarn add @jameslnewell/buildkite-pipelines@latest --production
 
 WORKDIR /workdir
