--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM node:16-alpine
 WORKDIR /
 
 ENV PATH="/node_modules/.bin:${PATH}"
-RUN yarn add @jameslnewell/buildkite-pipelines@latest --production
+RUN yarn add @jameslnewell/buildkite-pipelines@latest --production \
+  && yarn cache clean
 
 WORKDIR /workdir
