added groupstep and clean docker cache after installation for smaller images

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine
 WORKDIR /
 
 ENV PATH="/node_modules/.bin:${PATH}"
-RUN yarn add @jameslnewell/buildkite-pipelines@latest --production \
-  && yarn cache clean
+RUN yarn add @jameslnewell/buildkite-pipelines@latest --production && \
+  yarn cache clean
 
 WORKDIR /workdir
