--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "author": "James Newell <james@jameslnewell.dev>",
   "license": "MIT",
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "pnpm@8.6.6",
   "dependencies": {
     "debug": "^4.3.4",
     "js-yaml": "^4.1.0",
@@ -37,7 +37,7 @@
     "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^5.1.6"
   },
   "jest": {
     "preset": "@jameslnewell/jest-preset",
