--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@jameslnewell/buildkite-pipelines",
-  "version": "1.6.0",
+  "version": "2.0.0-preview.0",
   "bin": "dist/cli.js",
   "main": "dist/api.js",
   "files": [
     "dist"
   ],
-  "author": "James Newell <james@jameslnewell.dev>",
+  "author": "James Newell <gday@jameslnewell.dev>",
   "license": "MIT",
   "packageManager": "pnpm@8.6.6",
   "dependencies": {
+    "ajv": "^8.12.0",
     "debug": "^4.3.4",
     "js-yaml": "^4.1.0",
     "prettier": "^2.5.1",
@@ -36,6 +37,7 @@
     "eslint": "^8.8.0",
     "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
+    "json-schema-to-typescript": "^13.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^5.1.6"
   },
@@ -46,6 +48,7 @@
   "scripts": {
     "check": "yarn run check:types",
     "check:types": "tsc --noEmit",
+    "codegen": "json2ts src/schema/schema.json src/schema/schema.ts",
     "develop": "yarn run build:transpile --watch",
     "build": "yarn run build:types && yarn run build:transpile",
     "build:types": "tsc --declaration --emitDeclarationOnly",
