--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,6 +12,9 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ES2020"
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "target": "ES2020",
+    "resolveJsonModule": true
   }
 }
