--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,12 +72,10 @@ jobs:
         shell: bash {0} # opt-out of exit on error
       - run: git push
       - run: git push --follow-tags
-      - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+      - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: pnpm dlx publish-if-not-published
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   docker-push:
     runs-on: ubuntu-latest
