--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-
 name: Release
 
 on:
@@ -7,7 +6,6 @@ on:
       - main
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -37,11 +35,11 @@ jobs:
 
   npm-publish:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - build
     outputs:
       version: ${{ steps.version.outputs.version }}
-    steps: 
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
@@ -74,16 +72,19 @@ jobs:
         shell: bash {0} # opt-out of exit on error
       - run: git push
       - run: git push --follow-tags
+      - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: pnpm dlx publish-if-not-published
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   docker-push:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - build
       - npm-publish
-    steps: 
+    steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -106,4 +107,3 @@ jobs:
       #     username: ${{ secrets.DOCKERHUB_USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       #     readme-filepath: docker/README.md
-  
