--- a/fixtures/secrets-docker-login-docker-cache.yml
+++ b/fixtures/secrets-docker-login-docker-cache.yml
@@ -1,5 +1,5 @@
 steps:
-  - label: ":typescript: check:workspaces (back-end)"
+  - label: ':typescript: check:workspaces (back-end)'
     branches:
       - master
       - preview
@@ -22,11 +22,11 @@ steps:
           server: ghcr.io
       - docker#v3.11.0:
           image: ghcr.io/mr-yum/ci:2.4.0
-  - label: ":typescript: check:workspaces (back-end)"
+  - label: ':typescript: check:workspaces (back-end)'
     branches:
-      - "!master"
-      - "!preview"
-      - "!production"
+      - '!master'
+      - '!preview'
+      - '!production'
     commands:
       - set -e
       - cd back-end
@@ -48,7 +48,7 @@ steps:
       - docker#v3.11.0:
           image: ghcr.io/mr-yum/ci:2.4.0
   - key: backend-unit-test
-    label: ":jest: test:unit (back-end)"
+    label: ':jest: test:unit (back-end)'
     branches:
       - master
       - preview
@@ -79,7 +79,7 @@ steps:
       - back-end/**/coverage/cobertura-coverage.xml
       - back-end/**/coverage/**/cobertura-coverage.xml
     timeout_in_minutes: 10
-  - label: ":coverage: coverage api"
+  - label: ':coverage: coverage api'
     branches:
       - master
       - preview
@@ -92,7 +92,7 @@ steps:
     plugins:
       - artifacts#v1.5.0:
           download:
-            - "**/*"
+            - '**/*'
       - seek-oss/aws-sm#v2.3.1:
           env:
             CODECOV_TOKEN:
@@ -105,11 +105,11 @@ steps:
             - CODECOV_TOKEN
     soft_fail: true
   - key: backend-unit-test-branch
-    label: ":jest: test:unit (back-end)"
+    label: ':jest: test:unit (back-end)'
     branches:
-      - "!master"
-      - "!preview"
-      - "!production"
+      - '!master'
+      - '!preview'
+      - '!production'
     commands:
       - set -e
       - cd back-end
