--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
     "@jameslnewell/jest-preset": "^3.0.0",
+    "@jameslnewell/prettier-config": "^1.1.0",
     "@jest/types": "^27.5.1",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.163",
@@ -53,15 +54,18 @@
     "preset": "@jameslnewell/jest-preset",
     "resolver": "jest-pnp-resolver"
   },
+  "prettier": "@jameslnewell/prettier-config",
   "scripts": {
-    "check": "yarn run check:types",
+    "fix:formatting": "prettier --write .",
+    "check": "pnpm run check:formatting && pnpm run check:types",
+    "check:formatting": "prettier --check .",
     "check:types": "tsc --noEmit",
-    "prepare": "yarn run codegen",
+    "prepare": "pnpm run codegen",
     "codegen": "json2ts src/schema/schema.json src/schema/schema.ts",
-    "develop": "yarn run build:transpile --watch",
-    "build": "yarn run build:types && yarn run build:transpile",
+    "develop": "pnpm run build:transpile --watch",
+    "build": "pnpm run build:types && pnpm run build:transpile",
     "build:types": "tsc --declaration --emitDeclarationOnly",
-    "build:transpile": "yarn swc src --out-dir dist --source-maps --copy-files",
+    "build:transpile": "swc src --out-dir dist --source-maps --copy-files",
     "test": "jest --maxWorkers=1",
     "changeset": "changeset",
     "version": "changeset version",
