--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    name: '👷‍♂️ Building'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -34,6 +35,7 @@ jobs:
           path: dist
 
   npm-publish:
+    name: '📦 Publishing to NPM'
     runs-on: ubuntu-latest
     needs:
       - build
@@ -78,6 +80,7 @@ jobs:
       - run: pnpm dlx publish-if-not-published
 
   docker-push:
+    name: '🐳 Publishing to DockerHub'
     runs-on: ubuntu-latest
     needs:
       - build
