--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@types/yargs": "^17.0.10",
     "chokidar": "^3.5.3",
     "eslint": "^8.8.0",
+    "husky": "^8.0.3",
     "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
     "json-schema-to-typescript": "^13.0.2",
+    "pretty-quick": "^3.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^5.1.6"
   },
