--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  build:
-    name: '👷‍♂️ Building'
+  build-package:
+    name: '👷‍♂️📦 Building package'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,17 +28,48 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - run: pnpm install
-      - run: pnpm run build
+      - run: pnpm run build:types && pnpm build:transpile
       - uses: actions/upload-artifact@v3
         with:
-          name: dist
-          path: dist
+          name: package-dist
+          path: |
+            dist/cli
+            dist/lib
 
-  npm-publish:
+  build-pages:
+    name: '👷‍♂️📚 Building pages'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: pnpm/action-setup@v2
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - run: pnpm install
+      - run: pnpm run build:pages
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pages-dist
+          path: |
+            dist/pages
+
+  publish-package:
     name: '📦 Publishing to NPM'
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build-package
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -63,8 +94,7 @@ jobs:
       - run: pnpm install
       - uses: actions/download-artifact@v3
         with:
-          name: dist
-          path: dist
+          name: package-dist
       - run: pnpm run changeset version
       - id: version
         run: echo "::set-output name=version::$(jq -r .version package.json)"
@@ -83,8 +113,7 @@ jobs:
     name: '🐳 Publishing to DockerHub'
     runs-on: ubuntu-latest
     needs:
-      - build
-      - npm-publish
+      - publish-package
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
@@ -108,3 +137,17 @@ jobs:
       #     username: ${{ secrets.DOCKERHUB_USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       #     readme-filepath: docker/README.md
+
+  pages-upload:
+    name: '🕸️ Publishing to Github Pages'
+    runs-on: ubuntu-latest
+    needs:
+      - build-pages
+    permissions:
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/deploy-pages@v2
+        with:
+          artifact_name: pages-dist
