--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  check_formatting:
+  check-formatting:
     name: '💅 Check formatting'
     runs-on: ubuntu-latest
     steps:
@@ -28,8 +28,8 @@ jobs:
       - run: pnpm install
       - run: pnpm run check:formatting
 
-  check_types:
-    name: '👮‍♂️ Check typings'
+  check-typing:
+    name: '👮‍♂️ Check typing'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -146,6 +146,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     needs:
+      - check-formatting
+      - check-typing
+      - test
+      - build-pages
       - build-package
     outputs:
       version: ${{ steps.version.outputs.version }}
@@ -191,7 +195,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     needs:
-      - publish-package
+      - check-formatting
+      - check-typing
+      - test
+      - build-pages
+      - build-package
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
@@ -221,7 +229,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     needs:
+      - check-formatting
+      - check-typing
+      - test
       - build-pages
+      - build-package
     permissions:
       pages: write # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
