try publishing pages

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -227,7 +227,7 @@ jobs:
   pages-upload:
     name: '⬆️🕸️ Publishing to Github Pages'
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
     needs:
       - check-formatting
       - check-typing
