--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -226,7 +226,7 @@ jobs:
   pages-upload:
     name: '⬆️🕸️ Publishing to Github Pages'
     runs-on: ubuntu-latest
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     needs:
       - check-formatting
       - check-typing
