--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "check": "pnpm run check:formatting && pnpm run check:types",
     "check:formatting": "prettier --check .",
     "check:types": "tsc --noEmit",
-    "prepare": "pnpm run codegen",
+    "prepare": "husky install && pnpm run codegen",
     "codegen": "json2ts src/lib/schema/schema.json src/lib/schema/schema.ts",
     "develop": "pnpm run build:transpile --watch",
     "build": "pnpm run build:types && pnpm run build:transpile && pnpm run build:docs",
