--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "fix:formatting": "prettier --write .",
     "check": "pnpm run check:formatting && pnpm run check:types",
     "check:formatting": "prettier --check .",
-    "check:types": "tsc --noEmit",
+    "check:typing": "tsc --noEmit",
     "prepare": "husky install && pnpm run codegen",
     "codegen": "json2ts src/lib/schema/schema.json src/lib/schema/schema.ts",
     "develop": "pnpm run build:transpile --watch",
