Proposal: Add test utilities (#54)
* initial poc of test utilities - findSteps

* docs(changeset): y

* rename __experimental__testing to __experimental__

* add more getters and use Readonly instead of Iteratble

* fix pipeline artifact includes

* make findSteps and findPlugins return value ReadOnlyArray

* update changelog

* remove comment

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -111,6 +111,7 @@ jobs:
           path: |
             dist/cli
             dist/lib
+            dist/__experimental__
 
   build-pages:
     name: '👷‍♂️📚 Building pages'
