--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "module": "commonjs",
     "target": "es2018",
     "outDir": "./dist"
