--- a/packages/buildkite-pipelines/package.json
+++ b/packages/buildkite-pipelines/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "@jameslnewell/buildkite-pipelines-root",
+  "name": "@jameslnewell/buildkite-pipelines",
   "version": "3.22.0",
-  "private": true,
+  "main": "./dist/index.js",
+  "files": [
+    "dist"
+  ],
   "author": "James Newell <gday@jameslnewell.dev>",
   "description": "Generate Buildkite pipelines from code.",
+  "keywords": [
+    "buildkite",
+    "pipelines",
+    "sdk"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jameslnewell/buildkite-pipelines.git"
+    "url": "https://github.com/jameslnewell/buildkite-pipelines.git",
+    "directory": "packages/buildkite-pipelines"
   },
   "bugs": {
     "url": "https://github.com/jameslnewell/buildkite-pipelines/issues"
   },
   "homepage": "https://github.com/jameslnewell/buildkite-pipelines",
-  "packageManager": "pnpm@8.6.6",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "debug": "^4.3.4",
+    "js-yaml": "^4.1.0",
+    "prettier": "^2.5.1"
+  },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
     "@jameslnewell/jest-preset": "^3.0.0",
     "@jameslnewell/prettier-config": "^1.1.0",
-    "@jest/types": "^27.5.1",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.163",
     "@swc/jest": "^0.2.20",
-    "@swc/register": "^0.1.10",
     "@types/debug": "^4",
-    "@types/eslint": "^8.4.1",
     "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.14",
     "@types/prettier": "^2.4.4",
-    "@types/resolve": "^1.20.1",
-    "@types/yargs": "^17.0.10",
-    "chokidar": "^3.5.3",
-    "eslint": "^8.8.0",
-    "husky": "^8.0.3",
     "jest": "^27.5.1",
     "jest-pnp-resolver": "^1.2.2",
     "json-schema-to-typescript": "^13.0.2",
-    "pretty-quick": "^3.1.3",
-    "ts-node": "^10.7.0",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6"
   },
@@ -47,17 +50,13 @@
   },
   "prettier": "@jameslnewell/prettier-config",
   "scripts": {
-    "fix:formatting": "prettier --write .",
-    "check": "pnpm run check:formatting && pnpm run check:typing",
-    "check:formatting": "prettier --check .",
-    "check:typing": "pnpm -r --parallel run check:typing",
-    "prepare": "husky install",
-    "build": "pnpm -r run build",
-    "build:pages": "pnpm --filter @jameslnewell/buildkite-pipelines run build:pages",
-    "test": "pnpm -r run test",
-    "changeset": "changeset",
-    "version": "changeset version",
-    "release": "changeset publish"
+    "check:typing": "tsc --noEmit",
+    "codegen": "json2ts src/schema/schema.json src/schema/schema.ts",
+    "build": "pnpm run build:types && pnpm run build:transpile",
+    "build:types": "tsc --declaration --emitDeclarationOnly",
+    "build:transpile": "swc src --out-dir dist --source-maps --copy-files",
+    "build:pages": "typedoc",
+    "test": "jest --maxWorkers=1"
   },
   "license": "MIT"
 }
