--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@jameslnewell/jest-preset": "^3.0.0",
     "@jameslnewell/prettier-config": "^1.1.0",
     "@jest/types": "^27.5.1",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.163",
+    "@swc/cli": "^0.1.65",
+    "@swc/core": "^1.15.1",
     "@swc/jest": "^0.2.20",
     "@swc/register": "^0.1.10",
     "@types/debug": "^4",
@@ -31,6 +31,7 @@
     "@types/resolve": "^1.20.1",
     "@types/yargs": "^17.0.10",
     "chokidar": "^3.5.3",
+    "cpx": "^1.5.0",
     "eslint": "^8.8.0",
     "husky": "^8.0.3",
     "jest": "^27.5.1",
@@ -43,7 +44,11 @@
   },
   "jest": {
     "preset": "@jameslnewell/jest-preset",
-    "resolver": "jest-pnp-resolver"
+    "resolver": "jest-pnp-resolver",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ]
   },
   "prettier": "@jameslnewell/prettier-config",
   "scripts": {
