--- a/packages/buildkite-pipelines/tsconfig.json
+++ b/packages/buildkite-pipelines/tsconfig.json
@@ -6,5 +6,5 @@
     "target": "es2018",
     "outDir": "./dist"
   },
-  "exclude": ["dist"]
+  "exclude": ["dist", "**/*.test.ts", "**/*.test.tsx", "**/__snapshots__"]
 }
