--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,8 +29,8 @@
     "yargs": "^17.4.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.163",
+    "@swc/cli": "^0.1.65",
+    "@swc/core": "^1.15.1",
     "@types/debug": "^4",
     "@types/node": "^17.0.14",
     "@types/resolve": "^1.20.1",
@@ -39,9 +39,10 @@
   },
   "scripts": {
     "check:typing": "tsc --noEmit",
-    "build": "pnpm run build:types && pnpm run build:transpile",
+    "build": "pnpm run build:types && pnpm run build:transpile && pnpm run build:files",
     "build:types": "tsc --declaration --emitDeclarationOnly",
-    "build:transpile": "swc src --out-dir dist --source-maps --copy-files"
+    "build:transpile": "swc src --out-dir dist --source-maps --ignore '**/*.test.ts'",
+    "build:files": "cpx 'src/**/*.{json,md}' dist"
   },
   "license": "MIT"
 }
